--- a/README.Rmd
+++ b/README.Rmd
@@ -7,17 +7,19 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This page was created to reproduce some of the results and provide the code used in the paper: 
+This page was created to reproduce some of the results and provide the code in **_R_ programming** used in the paper: 
 
 >[Authors Anonymous]. The road ahead of using AI for visualizations in street design: Learning from failures. Paper submitted to the International Journal of Information Management. 
 
 * If any of the material is used, please cite the paper above. 
 
-### Motivation:  
+>**Note**: The results from the generative deep modelling were not good due to many reasons explained in the paper. 
+
+#### Motivation:  
 
 In this paper we propose the use of _generative deep models_ for guiding public meetings and workshops on street design and street space allocation projects. As many urban projects are time-consuming and the communication of innovative projects may not be clear without visualizations, speeding up this process through AI may ease the communication, public participation, and understanding of street space reallocation projects. Using generative deep models to generate various scenarios of street images by modifying characteristics of the images in real-time, can be used as a tool to promote discussions on possible solutions. 
 
-These models may have higher importance when explaining and proposing innovative solutions to the street that are not straightforward to have a mental map by the public, such as allocating road space dynamically for different uses, or using technology to manage the space. Generating various scenarios of a specific street is important because more than one solution could be applied to the street. Consequently, public managers may choose one solution for reallocating the space permanently, or more than one solution, that could be used for changing the space in different times of the day, week, or season. 
+These models may have higher importance when explaining and proposing innovative solutions to the street that are not straightforward to have a mental map by the public, such as allocating road space dynamically for different uses, or using technology to manage the space. Generating various scenarios of a specific street is important because more than one solution can be applied to the street. Consequently, public managers may choose one solution for reallocating the space permanently, or more than one solution, that could be used for changing the space in different times of the day, week, or season. 
 
 ### Methodology: 
 
@@ -25,11 +27,11 @@ The methodology consists of three main tasks:
 
 * **Image collection and preprocessing**: 
 
-We extracted street images from the Mapillary database. Then performed a manual filtering process, removing images of low quality. The database after filtered can be found [here](Database/Images/). To avoid overfitting, we performed image augmentation. 
+We extracted street images from the Mapillary database. Then performed a manual filtering process, removing images of low quality. The database after filtered can be found [here](Database/Images/). To avoid overfitting, we performed image augmentation to the filtered images. 
 
 * **Object detection/ segmentation**: 
 
-We perform object detection in this example, to use the vehicles as features in the generative deep model. We suggest that future studies use image segmentation.  
+In this example, we perform object detection to detect vehicles in the images, and use them as features in the generative deep model. We suggest that future studies use image segmentation.  
 
 * **Generative deep modelling**: 
 
@@ -39,46 +41,50 @@ We tested two types of models. The aim is to generate images conditioned by spec
 
 #### 1. Dataset
 
-a) The [original dataset](Dataset/Images/) used for [Training](Dataset/Images/Train_filtered/) and [Test](Dataset/Images/Test_filtered/) filtered manually, without augmentation.
+a) Download the [original dataset](Dataset/Images/) used for [Training](Dataset/Images/Train_filtered/) and [Test](Dataset/Images/Test_filtered/) after manually filtered, without augmentation.
 
-b) Features extracted from object detection in two formats for inputs in the Conditional Variational Autoencoder: 
+b) Download the **features** extracted from object detection in two formats for inputs in the Conditional Variational Autoencoder: 
 
 * Dummy variables indicating if objects were present or not in the image for [Training](Dataset/Features/Features_Dummy_Train/) and [Test](Dataset/Features/Features_Dummy_Test/); 
 
 * Counting the number of each object present in the image for [Training](Dataset/Features/Features_Class_Train/) and [Test](Dataset/Features/Features_Class_Test). 
 
->**Note**: In the example of the paper we used only the first option as inputs for the Conditional Variational Autoencoder. However, we make available the code and dataset for both options. 
+>**Note**: In the example of the paper we used only the first option as inputs for the Conditional Variational Autoencoder. However, we share the code and dataset of both options. 
 
 #### 2. Codes
 
-We share the [codes in R](Codes/) used for the preprocessing of the images (image augmentation and object detection) and also to perform the variational autoenconder (only images as inputs) and the conditional variational autoencoder (images and features as inputs). 
+We share the [codes in _R_](Codes/) used for the preprocessing of the images (image augmentation and object detection) and also to perform the variational autoencoder (only images as inputs) and the conditional variational autoencoder (images and features as inputs). 
 
 ##### Preprocessing 
 
-a. [Image augmentation](Codes/Image_Augmentation.R)
+* [Image augmentation](Codes/Image_Augmentation.R)
 
-b. [Object detection](Codes/Object_Detection.R)
+* [Object detection](Codes/Object_Detection.R)
 
 ##### Generative Deep Modelling
 
-c. [Variational Autoencoder](Codes/VAE_StreetDesign.R)
+* [Variational Autoencoder](Codes/VAE_StreetDesign.R)
 
-d. [Conditional Variational Autoencoder](Codes/CVAE_StreetDesign.R)
+* [Conditional Variational Autoencoder](Codes/CVAE_StreetDesign.R)
 
 
 #### 3. Guidelines
 
-We reproduce some results in RMarkdown in order for an easier understanding of the steps taken in each task. 
+We reproduce some of the results in RMarkdown in order for an easier understanding of the steps taken in each task.
+
+>**Note**: The image augmentation and object detection produced meaningful and reliable results because we used a pre-trained models. The variational autoencoder and conditional variational autoencoder produced less reliable results. 
 
 ##### Preprocessing 
 
-a. [Image Augmentation](Image_Augmentation.md)
+* [Image Augmentation](Image_Augmentation.md)
 
-b. [Object Detection](Object_Detection.md)
+* [Object Detection](Object_Detection.md)
 
 ##### Generative Deep Modelling
 
-c. [Variational Autoencoder](VAE.md)
+* [Variational Autoencoder](VAE.md)
 
-d. [Conditional Variational Autoencoder](CVAE.md)
+* [Conditional Variational Autoencoder](CVAE.md)
+
+>**Note**: The parameters and architecture of the model are presented in these guidelines only as examples. Please check Table 1 of the paper for more detail of the experiments performed. 
 
