--- a/Image_Augmentation.Rmd
+++ b/Image_Augmentation.Rmd
@@ -4,7 +4,7 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,  fig.path = "Fig_Guidelines/Image_Augmentation_")
 ```
 
 ##### 1. Import libraries
