--- a/Object_Detection.Rmd
+++ b/Object_Detection.Rmd
@@ -4,7 +4,7 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,  fig.path = "Fig_Guidelines/Object_Detection_")
 ```
 
 ##### 1. Install libraries
