--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ If any of the material is used, **please cite the paper above**.
 
 >**Note**: The results from the generative deep modelling were not good due to many reasons explained in the paper. 
 
-#### Motivation:  
+### Motivation:  
 
 In this paper we propose the use of _generative deep models_ for guiding public meetings and workshops on street design and street space allocation projects. As many urban projects are time-consuming and the communication of innovative projects may not be clear without visualizations, speeding up this process through AI may ease the communication, public participation, and understanding of street space reallocation projects. Using generative deep models to generate various scenarios of street images by modifying characteristics of the images in real-time, can be used as a tool to promote discussions on possible solutions. 
 
@@ -27,7 +27,7 @@ The methodology consists of three main tasks:
 
 * **Image collection and preprocessing**: 
 
-We extracted street images from the Mapillary database. Then performed a manual filtering process, removing images of low quality. The database after filtered can be found [here](Dataset/Images/). To avoid overfitting, we performed image augmentation to the filtered images. 
+We extracted street images from the Mapillary database. Then performed a manual filtering process, removing images of low quality. To avoid overfitting, we performed image augmentation to the filtered images. 
 
 * **Object detection/ segmentation**: 
 
