--- a/README.Rmd
+++ b/README.Rmd
@@ -43,11 +43,11 @@ We tested two types of models. The aim is to generate images conditioned by spec
 
 a) Download the original dataset used for [Training](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Train_Images_filtered.zip) and [Test](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Test_Images_filtered.zip) after manually filtered, without augmentation.
 
-b) Download the **features** extracted from object detection in two formats for inputs in the Conditional Variational Autoencoder: 
+b) Download the **features** extracted from object detection for inputs in the Conditional Variational Autoencoder in two formats: 
 
 * Dummy variables indicating if objects were present or not in the image for [Training](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Features_Dummy_Train.zip) and [Test](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Features_Dummy_Test.zip); 
 
-* Counting the number of each object present in the image for [Training](Dataset/Features/Features_Class_Train/) and [Test](Dataset/Features/Features_Class_Test). 
+* Counting the number of each object present in the image for [Training](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Features_Class_Train.zip) and [Test](https://github.com/valenca13/CVAE_StreetDesign/releases/download/1.0/Features_Class_Test.zip). 
 
 >**Note**: In the example of the paper we used only the first option as inputs for the Conditional Variational Autoencoder. However, we share the code and dataset of both options. 
 
